fix: truncate notifications after two lines

--- a/packages/core/src/components/rtk-notification/rtk-notification.css
+++ b/packages/core/src/components/rtk-notification/rtk-notification.css
@@ -24,8 +24,7 @@ img.loaded {
 }
 
 .message {
-  @apply max-w-72 mr-3;
-  @apply truncate;
+  @apply !max-w-72 !text-text-md !line-clamp-2 mr-2;
 
   p {
     @apply m-0 mr-1;
